frontend alignment fix

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -2,6 +2,9 @@ body {
   font-family: "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei UI","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
 }
 
+.poetry-card {
+  margin: 45px 10px 0px 0px;
+}
 /*
 body {
   background-color: #F2F1EF;
